--- a/blocks/profile/__buttom-add/profile__buttom-add.css
+++ b/blocks/profile/__buttom-add/profile__buttom-add.css
@@ -2,7 +2,7 @@
   width: 150px;
   height: 50px;
   background-color: black;
-  background-image: url(../../../images/buutons/plus.svg);
+  background-image: url(../../../images/buttons/plus.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: 2px solid #FFFFFF;
