--- a/blocks/profile/__buttom-add/profile__buttom-add.css
+++ b/blocks/profile/__buttom-add/profile__buttom-add.css
@@ -17,9 +17,16 @@
   transition: opacity .3s ease;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 700px) {
   .profile__buttom-add {
-    margin-top: 33px;
-    width: 100%;
+    margin: 33px 0 0 0;
+    width: 282px;
+    background-size: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__buttom-add {
+    max-width: 100%;
   }
 }
