--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 880px;
   padding-top: 45px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
   padding-bottom:  37px;
 }
 
@@ -14,7 +14,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 375px) {
   .header {
     padding: 28px 0 27px;
   }
