--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,10 +7,16 @@
   line-height: 22px;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 700px) {
+  .profile__subtitle {
+    text-align: center;
+  }
+}
+
+
+@media screen and (max-width: 375px) {
   .profile__subtitle {
     font-size: 14px;
-    text-align: center;
     line-height: 17px;
     padding-top: 6px;
     margin: 0 auto;
