--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,6 @@
 @import url(../blocks/page/__position/page__position.css);
 
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__line/header__line.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/content/content.css);
@@ -21,12 +20,13 @@
 
 @import url(../blocks/elements/elements.css);
 
-@import url(../blocks/element/element.css);
-@import url(../blocks/element/__image/element__image.css);
-@import url(../blocks/element/__title/element__title.css);
-@import url(../blocks/element/__text/element__text.css);
-@import url(../blocks/element/__heart/element__heart.css);
-@import url(../blocks/element/__heart/_active/element__heart_active.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__text/cards__text.css);
+@import url(../blocks/cards/__heart/cards__heart.css);
+@import url(../blocks/cards/__heart/_active/cards__heart_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
@@ -38,7 +38,9 @@
 @import url(../blocks/popup/__button-сlose/popup__button-сlose.css);
 
 @import url(../blocks/form/__input/form__input.css);
-@import url(../blocks/form/__input/_last/form__input_last.css);
+@import url(../blocks/form/__input/_item/form__input_item_last.css);
 @import url(../blocks/form/__button/form__button.css);
+
+
 
 
