--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -21,8 +21,9 @@
 
 @media screen and (max-width: 540px) {
   .form__button {
-    margin-top: 40px;
+    margin-top: 43px;
     font-size: 14px;
     line-height: 17px;
+    height: 46px;
   }
 }
