--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,7 @@
 @import url(../blocks/cards/__text/cards__text.css);
 @import url(../blocks/cards/__heart/cards__heart.css);
 @import url(../blocks/cards/__heart/_active/cards__heart_active.css);
+@import url(../blocks/cards/__trash/cards__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
@@ -36,10 +37,20 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__button-сlose/popup__button-сlose.css);
+@import url(../blocks/popup/__container-openImegeCard/popup__container-openImegeCard.css);
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__title-openImegeCard/popup__title-openImegeCard.css);
 
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input/_item/form__input_item_last.css);
 @import url(../blocks/form/__button/form__button.css);
+
+
+
+
+
+
+
 
 
 
