--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,7 +1,10 @@
 .cards__item {
+  position: relative;
   padding: 0;
   margin: 0;
   max-width: 282px;
   background-color: #fff;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
