--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,14 @@
 .popup {
-  display: none;
+  visibility: hidden;
+  display: flex;
   position: fixed;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top:0;
   left: 0;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transition:  .3s;
 }
