Функционал страницы. Второй коммит

--- a/styles/index.css
+++ b/styles/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__buttom-info/profile__buttom-info.css);
 @import url(../blocks/profile/__buttom-add/profile__buttom-add.css);
+@import url(../blocks/profile/__line/profile__line.css);
 
 @import url(../blocks/elements/elements.css);
 
@@ -40,6 +41,7 @@
 @import url(../blocks/popup/__container-openImegeCard/popup__container-openImegeCard.css);
 @import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/popup/__title-openImegeCard/popup__title-openImegeCard.css);
+@import url(../blocks/popup/_type/popup_type_openImegeCard.css);
 
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input/_item/form__input_item_last.css);
