--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,17 @@
+.profile__info {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 700px) {
+  .profile__info {
+    align-items: center;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .profile__info {
     margin: 26px 0 0;
   }
-} 
+}
 
