--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,11 +5,33 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+  max-width: 500px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 850px) {
+  .profile__subtitle {
+    max-width: 400px
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .profile__subtitle {
+    max-width: 350px;
+  }
 }
 
 @media screen and (max-width: 700px) {
   .profile__subtitle {
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .profile__subtitle {
+    max-width: 220px;
   }
 }
 
