--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,14 +1,54 @@
 .profile__title {
   display: inline-block;
+  max-width: 500px;
   margin: 0;
   padding: 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+
+
+@media screen and (max-width: 910px) {
+  .profile__title {
+    max-width: 400px;
+  }
+}
+
+@media screen and (max-width: 810px) {
+  .profile__title {
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .profile__title {
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: 585px) {
+  .profile__title {
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 435px) {
+  .profile__title {
+    max-width: 280px;
+    font-size: 27px;
+    line-height: 33px;
+  }
+}
+
 
 @media screen and (max-width: 375px) {
   .profile__title {
+    max-width: 220px;
     font-size: 27px;
     line-height: 33px;
   }
