--- a/src/blocks/form/__button/form__button.css
+++ b/src/blocks/form/__button/form__button.css
@@ -1,6 +1,7 @@
 .form__button {
   display: block;
-  margin-top: 47px;
+  /* margin-top: 47px; */
+  margin-top: 29px;
   padding: 0;
   width: 100%;
   height: 50px;
@@ -21,7 +22,7 @@
 
 @media screen and (max-width: 540px) {
   .form__button {
-    margin-top: 43px;
+    margin-top: 25px;
     font-size: 14px;
     line-height: 17px;
     height: 46px;
